<resources>
    <string name="app_name">Seismic</string>
    <!-- Screen Titles -->
    <string name="activeSessionScreen">Active Session</string>
    <string name="saveSessionScreen">Save Session</string>
    <string name="sessionsListScreen">All Sessions</string>
    <string name="currentSessionScreen">Current Session</string>

    <!-- Button Text -->
    <string name="startSession">Start Session</string>
    <string name="stopSession">Stop Session</string>
    <string name="clearSessions">Clear Sessions</string>
    <string name="viewSessions">View Sessions</string>
    <string name="saveSession">Save Session</string>
    <string name="randomDataPoint">Random Float</string>

    <!-- Edit Text Prompts/Hints -->
    <string name="sessionTitle">Add a session title</string>
    <string name="sessionNote">Add a note</string>

    <string name="title"><![CDATA[<h3>SESSION DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>