<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="seismicViewModel"
            type="com.enshaedn.seismic.viewModels.SeismicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.SeismicHome">

        <TextView
            android:id="@+id/displayMeasurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{seismicViewModel.mString}"
            android:textAlignment="center"
            android:layout_marginBottom="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/displayDemo"/>

        <TextView
            android:id="@+id/displayDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{seismicViewModel.sessionsString}"
            android:textAlignment="center"
            android:layout_marginBottom="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/startSession"/>

        <Button
            android:id="@+id/startSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startSession"
            android:enabled="@{seismicViewModel.startButtonVisible}"
            android:onClick="@{() -> seismicViewModel.onStartSession()}"
            app:layout_constraintBottom_toTopOf="@id/generateRandom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/generateRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomDataPoint"
            android:enabled="@{seismicViewModel.stopButtonVisible}"
            android:onClick="@{() -> seismicViewModel.onGenerateRandom()}"
            app:layout_constraintBottom_toTopOf="@id/stopSession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopSession"
            android:enabled="@{seismicViewModel.stopButtonVisible}"
            android:onClick="@{() -> seismicViewModel.onStopSession()}"
            app:layout_constraintBottom_toTopOf="@id/clearSessions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/clearSessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearSessions"
            android:enabled="@{seismicViewModel.clearButtonVisible}"
            android:onClick="@{() -> seismicViewModel.onClear()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
